ADD_ONA_BBG
  File "<ipython-input-4-04a28cd6bd5d>", line 206
    def _find_hierarchical_approver(self, emails: List[Dict]) -> Optional[str]:
    ^
SyntaxError: invalid syntax
